argos_k3s/argos/argos-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argos # Change this value if you want a different namespace name
  labels:
    name: argos # Change this value to match metadata.name
