argos_k3s/argos/argos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argos-dep
  namespace: argos
  labels:
    app: argos
spec:
  # serviceName: argos
  replicas: 1
  selector:
    matchLabels:
      app: argos
  template:
    metadata:
      labels:
        app: argos
    spec:
      serviceAccountName: argos-service-account
      containers:
      - name: argos
        image: cachengo/argos:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          hostPort: 8080
        volumeMounts:
        - name: argos-pvc
          mountPath: /raft-storage/videos
      volumes:
        - name: argos-pvc
          persistentVolumeClaim:
            claimName: argos-pvc
