argos_k3s/argos/argos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argos-ingress
  namespace: argos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: argos.mybento.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argos-service
            port:
              number: 8080
